fixed the overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: rgba(250, 243, 221, 1);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 main {
